# ashellwig_m5c9_programming_assignment

./: .cmake-format.py  .cmake-format.yaml  .env  .gdbinit  .gitignore  .gitmodules  .latexmkrc  .lldbinit  .perlcriticrc  .shellcheckrc  .tidyallrc  .zsherr  CMakeLists.txt  Doxyfile  Makefile  PKGBUILD
.github/workflows/: ccpp.yml  cxx.yml
cmake/Catch2/: ParseAndAddCatchTests.cmake
doc/user_docs/: Makefile  main.bib  main.tex
doc/user_docs/tex/: m4c8alg.tex  m4c9alg.tex  m5c9alg.tex
include/: Student.hh  Student.tcc  ashwig_debug.hh  ashwig_exceptions.hh  chapter8.hh  chapter9.hh  general_functions.hh  options.hh
include/catch2/: catch.hh  catch.hpp
scripts/: build_and_run_linux.sh  cmake_helper  get_project_dir  get_project_dir.zsh  uninstall_catch2  update_catch2  update_catch2.sh
scripts/lib/: lib.sh
share/include/: README.md
src/: Student.cxx  chapter8.cxx  chapter9.cxx  general_functions.cxx  main.cxx  options.cxx
test/: 00_CatchMain.cxx  01_TestStudentClass.cxx  TestCase.cxx  catch_main.cxx
